Add collision-proof ID generation across all monthly files
Implemented cross-file collision detection for 3-word IDs:
- Added idExistsInAnyFile() to scan all monthly notes files
- Uses glob pattern to find all *-notes.md files
- Checks for context IDs, reference IDs, and todo context links
- Updated generateUniqueThreeWordId() to retry on collisions
- Modified all ID generation points (todos, refs) to use unique generator
- Added glob package dependency for file pattern matching

IDs are now guaranteed unique across all months, preventing
conflicts as notes accumulate over time. With 125,000 possible
combinations, collisions are rare but now properly handled.

--- a/package.json
+++ b/package.json
@@ -10,12 +10,18 @@
   "scripts": {
     "test": "node bin/wdidt.js"
   },
-  "keywords": ["cli", "notes", "daily", "todo"],
+  "keywords": [
+    "cli",
+    "notes",
+    "daily",
+    "todo"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "chalk": "^5.3.0",
     "commander": "^11.1.0",
-    "inquirer": "^9.2.12",
-    "chalk": "^5.3.0"
+    "glob": "^11.0.3",
+    "inquirer": "^9.2.12"
   }
 }
