--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.13.1",
     "chalk": "^5.3.0",
     "commander": "^11.1.0",
     "glob": "^11.0.3",
