Redesign todos UI with seamless keyboard-driven table interface
- Install terminal-kit for interactive TUI capabilities
- Replace menu-based UI with continuous table display
- Add keyboard shortcuts for all actions:
  - SPACE: Toggle todo completion
  - E: Edit todo text
  - D: Delete todo
  - A: Add new todo with prompts
  - C: View context details
  - ESC: Exit or go back
- Display todos in formatted table with borders
- Show todo ID, completion status, text, and context in columns
- Navigate with arrow keys (UP/DOWN)
- Highlight selected todo with inverted colors
- Context view shows linked todos and allows ESC to return
- All contexts table accessible from todo list
- Seamless flow: select todo -> press key -> action -> refresh
- Terminal clears between views for clean app-like experience
- Proper input handling with grabInput and cursor management

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "cli-table3": "^0.6.5",
     "commander": "^11.1.0",
     "glob": "^11.0.3",
-    "inquirer": "^9.2.12"
+    "inquirer": "^9.2.12",
+    "terminal-kit": "^3.1.2"
   }
 }
