Add gitignore rules for sensitive data
- Ignore config files with API keys
- Ignore SSH private keys
- Protect .wdidt directory and any local config files

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,13 @@ node_modules/
 *.log
 .DS_Store
 .env
+
+# Config files with sensitive data
+.wdidt/
+config.json
+
+# SSH keys
+.git/ssh/
+*.pem
+id_rsa*
+id_ed25519*
